--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.46.0
 streamlit-webrtc==0.63.3
 ultralytics==8.3.162
-opencv-python==4.12.0.88
+#opencv-python==4.12.0.88
+opencv-python-headless
